[package]
name = "tilenet_ren"
version = "0.3.0"
description = "Render tilenet using glium. Currently just a special case where each tile is a u8 pixel."
authors = ["Erlend Hofstad Langseth <3rlendhl@gmail.com>"]
license = "GPL-3.0"

[dependencies]
clippy = { version = "0.0", optional = true }
glium = "0.15.0"
# tile_net = { git = "https://github.com/Ploppz/TileNet" }
tilenet = { path = "/home/ploppz/code/rust/tilenet" }

[features]
default = []
dev = ["clippy"]
